@@ -1,5 +1,6 @@
 V 0.5.0:
   - Added capability to log to files easily
+  - Added silent option
 V 0.4.6:
   - Added option to remove trailing zeroes from human_readable_bytes function
 V 0.4.5:
